[bugfix] Avoid using :active for animations to work on iOS (#103)

--- a/src/components/order_dashboard/order_form/order_form.css
+++ b/src/components/order_dashboard/order_form/order_form.css
@@ -97,17 +97,23 @@
     background-repeat: no-repeat;
     height: 30px;
     width: 30px;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
     padding-top: 10px;
-}
-
-.order-switch-button-image:active {
-    display: block;
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
     transition:  0s;
     -webkit-transition: 0s;
+}
+
+.transition-start {
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+}
+
+.transition-rotate {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transition:  0.5s;
+    -webkit-transition: 0.5s;
 }
 
 .order-form .active-button {
@@ -128,12 +134,18 @@
     position: absolute;
 }
 
-.price-switch-button:active {
-    position: absolute;
+.transition-half-start {
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+}
+
+.transition-half-rotate {
     transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
-    transition:  0s;
-    -webkit-transition: 0s;
+    transition:  0.5s;
+    -webkit-transition: 0.5s;
 }
 
 .max-amount {
